tests/sumo/tls/NEMA/errors/1/output.sumo
Loading net-file from 'net.net.xml' ... done (4ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading additional-files from 'input_additional2.add.xml' ... done (2ms).
